2013-10-15  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

    * @io/private/hco_.m:
    ([VERS]): Atualização da versão do arquivo de dados para 2.2
    ([DINT]): Inclusão da coluna de identificação do patamar de carga
    ([DPAT]): Seção removida
    ([DATE]): Substitui [DATA]

    * @io/private/mco_.m: Removido

    * @io/private/bus_.m: Arquivo de barras substitui arquivo de subsistemas
    ([VERS]): Atualização da versão do arquivo de dados para 1.0
    ([NBUS]): Número de barras substitui [NSUB]
    ([LOAD]): Demanda substitui [MSUB]
    ([GENR]): Geração despachada substitui [GPUH]

2013-10-09  Leonardo Martins  <leonardo@cose.fee.unicamp.br>

    * @uhe/uhe.m:
    (obj.ss): Propriedade removida

    * @uhe/dump.m:
    (obj.ss): Propriedade removida

    * @uhe/get.m:
    (obj.ss): Propriedade removida

    * @uhe/set.m:
    (obj.ss): Propriedade removida

    * @ute/ute.m:
    (obj.ss): Propriedade removida

    * @ute/dump.m:
    (obj.ss): Propriedade removida

    * @ute/get.m:
    (obj.ss): Propriedade removida

    * @ute/set.m:
    (obj.ss): Propriedade removida

    * @io/private/uhe_.m:
    ([PRIM]): Propriedade 'ss' removida
    ([VERS]): Atualização da versão do arquivo de dados para 3.2

    * @io/private/ute_.m:
    ([PRIM]): Propriedade 'ss' removida
    ([VERS]): Atualização da versão do arquivo de dados para 3.4

    * @problema/private/construir_G.m: Adiciona construção da matriz G

    * @problema/private/construir_I.m: Adiciona construção da matriz I

    * @problema/private/calcular_P.m: Renomeado para calcular_p(.)

    * @problema/private/calcular_JP.m: Removido

    * @problema/private/calcular_Jp.m: Considera múltiplas barras conectadas

    * @problema/private/calcular_HP.m: Removido

    * @problema/private/calcular_Hp.m: Considera múltiplas barras conectadas

    * @problema/private/calcular_p.m: Não acumula geração por subsistema

    * @problema/private/calcular_Q.m: Removido

    * @problema/private/calcular_JQ.m: Removido
